updates bug where text is covering button

--- a/public/stylesheets/css/home.css
+++ b/public/stylesheets/css/home.css
@@ -112,7 +112,7 @@
       }
 
       h2.name {
-        margin: 90% 0 0 10%;
+        margin: 70% 0 0 10%;
         transform: rotate(0deg);
         position: initial;
       }
